# Ude_Ros

./: README.md
ude_arduino/: CMakeLists.txt  package.xml
ude_arduino/msg/: ArmJointState.msg
ude_arduino/src/: moveit_convert.cpp
ude_control/: CMakeLists.txt  package.xml
ude_control/config/: ude_control.yaml
ude_control/launch/: ude_control.launch
ude_gazebo/: CMakeLists.txt  package.xml
ude_gazebo/launch/: empty_world.launch
ude_test_description/: CMakeLists.txt  package.xml
ude_test_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
ude_test_description/meshes/: base_1.stl  base_link.stl  centro_1.stl  punho_1.stl  superior_1.stl
ude_test_description/urdf/: materials.xacro  ude_test.gazebo  ude_test.trans  ude_test.xacro  ude_testee.xacro
ude_test_moveit/: CMakeLists.txt  package.xml
ude_test_moveit/config/: controllers.yaml  joint_limits.yaml  joints_names.yaml  ros_controllers.yaml  ude_real_controllers.yaml  ude_test.srdf
ude_test_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch~  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ude_planning_execution.launch  ude_real_moveit_controller_manager.launch.xml  (+3 more)
(+4 files in other folders)
