<package>
  <name>ude_gazebo</name>
  <version>0.0.0</version>
  <description>
      The Gazebo resources and configurations for the robotic arm.
  </description>
  <maintainer email="edmilsonvieira36@hotmail.com">Edmilson Casarin</maintainer>
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ude_test_description</build_depend>
  <build_depend>ude_control</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>ude_test_description</run_depend>
  <run_depend>ude_control</run_depend>
  <run_depend>xacro</run_depend>
  <export>
  </export>
 
</package>
